--- a/config_sample.env
+++ b/config_sample.env
@@ -1,26 +1,23 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6116087382:AAFHL7XNeI0ZdQxncXEIHx4ERJjPaNSYr8U"
+OWNER_ID = "1348153685"
+TELEGRAM_API = "12158462"
+TELEGRAM_HASH = "0b962717d931f4480c46d56c85d409a5"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AP9ZgD9dL6jLUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "20"
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
 DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+AUTHORIZED_CHATS = "-1001897884587 -1001934842043 -1001894446794 -1001645933125 -1001785535201 -1001680031747 -1001615697692 -1001966476072"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
-STATUS_LIMIT = "2" #recommended value 2
-STOP_DUPLICATE = ""
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://ynmoviechannel.ynmovie.workers.dev"
+STATUS_LIMIT = "5" #recommended value 2
+STOP_DUPLICATE = "True"
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
@@ -29,14 +26,14 @@ INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                  #Give Telegraph URL for Logs/File Thumbnail
 
 #TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = ""             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = ""              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "True"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "True"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MEDIAINFO_ENABLED = ""          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+MEDIAINFO_ENABLED = "True"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+SET_BOT_COMMANDS = "True" 
 
 # Update
 UPSTREAM_REPO = ""
@@ -60,7 +57,7 @@ LINK_LOGS =
 #Other
 TG_SPLIT_SIZE = ""
 AS_DOCUMENT = ""
-EQUAL_SPLITS = ""
+EQUAL_SPLITS = "True"
 TIMEZONE = "Asia/Kolkata"
 
 #Telegraph UI
@@ -87,8 +84,8 @@ RSS_CHAT_ID = ""
 USER_SESSION_STRING = ""     #Use it for 4GB leeching
 
 # Mega
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
+MEGA_API_KEY = "U9IwSDaK"
+MEGA_EMAIL_ID = "charchinster@gmail.com"
 MEGA_PASSWORD = ""
 
 # Shortener
